--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -349,6 +349,7 @@ footer a:hover {
 /* All Mobile Sizes (devices and browser) */
 @media only screen and (max-width: 767px) {
   header {
+    display:none;
     padding-top: 10px;
     padding-bottom: 10px;
   }
